--- a/home/ghostty.config
+++ b/home/ghostty.config
@@ -1,1 +1,6 @@
-font-family = "Fira Code"
+font-family ="Fira Code"
+font-size = 12
+mouse-hide-while-typing = true
+link-previews = true
+window-padding-x = 5
+window-padding-y = 5
