Using git credential manager

--- a/home/configs/gitconfig.config
+++ b/home/configs/gitconfig.config
@@ -46,13 +46,12 @@
 	templatedir = ~/.git-templates
 [commit]
 	gpgsign = true
-# [gpg]
-#	program = /opt/homebrew/bin/gpg
+[gpg]
+	program = /opt/homebrew/bin/gpg
 [diff]
 	external = difft
 [credential]
-	helper =
-	helper = /usr/local/share/gcm-core/git-credential-manager
+	helper = /usr/local/bin/git-credential-manager
 [credential "https://dev.azure.com"]
 	useHttpPath = true
 [filter "nbstripout"]
