--- a/home/configs/zed.settings.json
+++ b/home/configs/zed.settings.json
@@ -1,5 +1,8 @@
 {
   "vim_mode": true,
+  "buffer_font_family": "FiraCode Nerd Font Mono",
+  "ui_font_size": 16,
+  "buffer_font_size": 15,
   "active_pane_modifiers": {
     "border_size": 0.0,
     "inactive_opacity": 0.7
