--- a/home/configs/aerospace.config.toml
+++ b/home/configs/aerospace.config.toml
@@ -222,3 +222,47 @@ persistent-workspaces = ["1", "2", "3", "4", "5", "6", "7", "8", "9", "A", "B", 
     alt-shift-j = ['join-with down', 'mode main']
     alt-shift-k = ['join-with up', 'mode main']
     alt-shift-l = ['join-with right', 'mode main']
+
+
+[[on-window-detected]]
+    if.app-id = 'us.zoom.xos'
+    check-further-callbacks = false
+    run = [
+    'layout floating',
+    'move-node-to-workspace Z',
+    '''exec-and-forget osascript -e '
+        delay 5
+        tell application "System Events"
+           	tell application process "zoom.us"
+          		if (count of windows) > 0 then
+         			tell window 1
+            				set value of attribute "AXMinimized" to true
+         			end tell
+          		end if
+           	end tell
+        end tell'''' ]
+
+[[on-window-detected]]
+    if.app-id = 'com.mitchellh.ghostty'
+    check-further-callbacks = true
+    run = ['layout tiling', 'move-node-to-workspace G']
+
+[[on-window-detected]]
+    if.app-id = 'com.linear'
+    check-further-callbacks = true
+    run = ['layout tiling', 'move-node-to-workspace L']
+
+[[on-window-detected]]
+    if.app-id = 'notion.id'
+    check-further-callbacks = true
+    run = ['layout tiling', 'move-node-to-workspace N']
+
+[[on-window-detected]]
+    if.app-id = 'com.mitchellh.ghostty'
+    check-further-callbacks = true
+    run = ['layout tiling', 'move-node-to-workspace S']
+
+[[on-window-detected]]
+    if.app-id = 'com.superhuman.electron'
+    check-further-callbacks = true
+    run = ['layout tiling', 'move-node-to-workspace M']
