--- a/home/configs/ghostty.config
+++ b/home/configs/ghostty.config
@@ -4,3 +4,6 @@ mouse-hide-while-typing = true
 link-previews = true
 window-padding-x = 5
 window-padding-y = 5
+
+keybind = ctrl+enter=text:\r
+keybind = shift+enter=text:\n
