Fix newline and control codes in ghostty

--- a/home/configs/ghostty.config
+++ b/home/configs/ghostty.config
@@ -4,6 +4,13 @@ mouse-hide-while-typing = true
 link-previews = true
 window-padding-x = 5
 window-padding-y = 5
+quit-after-last-window-closed = true
 
-keybind = ctrl+enter=text:\r
-keybind = shift+enter=text:\n
+keybind = all:shift+enter=text:\n
+keybind = all:shift+kp_enter=text:\n
+
+keybind = all:ctrl+enter=text:\r
+keybind = all:ctrl+kp_enter=text:\r
+
+clipboard-write = allow
+clipboard-read = ask
