--- a/home/configs/aerospace.config.toml
+++ b/home/configs/aerospace.config.toml
@@ -235,7 +235,7 @@ persistent-workspaces = ["1", "2", "3", "4", "5", "6", "7", "8", "9", "A", "B", 
         tell application "System Events"
            	tell application process "zoom.us"
           		if (count of windows) > 0 then
-         			tell window 1
+         			tell window (count of windows)
             				set value of attribute "AXMinimized" to true
          			end tell
           		end if
