sssooooo many tweaks

--- a/home/configs/ghostty.config
+++ b/home/configs/ghostty.config
@@ -6,11 +6,11 @@ window-padding-x = 5
 window-padding-y = 5
 quit-after-last-window-closed = true
 
-keybind = all:shift+enter=text:\n
-keybind = all:shift+kp_enter=text:\n
+keybind = shift+enter=text:\n
+keybind = shift+kp_enter=text:\n
 
-keybind = all:ctrl+enter=text:\r
-keybind = all:ctrl+kp_enter=text:\r
+keybind = ctrl+enter=text:\r
+keybind = ctrl+kp_enter=text:\r
 
 clipboard-write = allow
 clipboard-read = ask
